--- a/index.html
+++ b/index.html
@@ -171,15 +171,20 @@
         <div class="contact-left">
           <h2>Get in touch</h2>
           <p class="muted">Send details and we'll get back within 24 hours.</p>
-          <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="contact-form">
-            <input type="hidden" name="form-name" value="contact">
-            <p class="hidden"><label>Don't fill this out if you're human: <input name="bot-field"></label></p>
-            <input type="text" name="name" placeholder="Your name" required />
-            <input type="email" name="email" placeholder="Email address" required />
-            <input type="text" name="company" placeholder="Company (optional)" />
-            <textarea name="message" placeholder="Tell us about your project" rows="5" required></textarea>
-            <button class="btn primary" type="submit">Send Message</button>
-          </form>
+          <form action="https://formsubmit.co/your-email@example.com" method="POST" class="contact-form">
+  <input type="text" name="name" placeholder="Your name" required>
+  <input type="email" name="email" placeholder="Email address" required>
+  <input type="text" name="company" placeholder="Company (optional)">
+  <textarea name="message" placeholder="Tell us about your project" rows="5" required></textarea>
+
+  <!-- Hidden fields -->
+  <input type="hidden" name="_subject" value="New message from Trizen website">
+  <input type="hidden" name="_next" value="https://shivamanand880.github.io/Trizen/thank-you.html">
+  <input type="hidden" name="_captcha" value="false">
+
+  <button class="btn primary" type="submit">Send Message</button>
+</form>
+
         </div>
         <div class="contact-right">
           <h3>Contact Info</h3>
