Update contact form email address to lowercase

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="contact-left">
           <h2>Get in touch</h2>
           <p class="muted">Send details and we'll get back within 24 hours.</p>
-          <form action="https://formsubmit.co/Shivamanand880@gmail.com" method="POST" class="contact-form">
+          <form action="https://formsubmit.co/shivamanand880@gmail.com" method="POST" class="contact-form" target="_blank">
   <input type="text" name="name" placeholder="Your name" required>
   <input type="email" name="email" placeholder="Email address" required>
   <input type="text" name="company" placeholder="Company (optional)">
@@ -184,6 +184,7 @@
 
   <button class="btn primary" type="submit">Send Message</button>
 </form>
+
 
         </div>
         <div class="contact-right">
