Change image file extension from JPG to jpeg

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
           <div class="team-card">
             <div class="avatar-wrap">
-              <img src="member3.JPG" alt="Ankit Kumar — CMO & Co-Founder" class="avatar">
+              <img src="member3.jpeg" alt="Ankit Kumar — CMO & Co-Founder" class="avatar">
             </div>
             <h3 class="member-name">Ankit Kumar</h3>
             <p class="member-role">CMO & Co-Founder</p>
